@@ -9,6 +9,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - [API_PARSER] [CISCO_UMBRELLA-MANAGED-ORG] New collector
 - [SYSTEM] [PKI] Add POST, PUT and DELETE requests for APIs
+### Removed
+- [API_PARSER] [CORTEX_XDR] Remove fields used for backward compatibility
 ### Changed
 - [API_PARSER] [HARFANGLAB] truncate 'rule_content' and 'process_sigma_rule_content' fields if they have more than 16384 characters
 ### Fixed
